--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,61 @@
-.App {
-  text-align: center;
+input[type="text"],
+input[type="email"],
+input[type="password"],
+textarea {
+  display: block;
+  border: 1px solid #ccc;
+  width: 100%;
+  padding: .8rem;
+  border-radius: 4px;
+  background: #eee;
+  transition: .2s;
+  margin-bottom: 1rem;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+button {
+  border: none;
+  font-size: 1rem;
+  padding: .4rem .8rem;
+  background-color: #0F0;
+  border-radius: 4px;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+input[type="text"]:focus,
+input[type="email"]:focus,
+input[type="password"]:focus {
+  outline: none;
+  border-color: #0af;
+  background: white;
+  box-shadow: 0 0 0 3px #aff;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+form {
+  position: relative;
 }
 
-.App-link {
-  color: #61dafb;
+.request {
+  font-size: 1.5rem;
+  padding: 20px;
+  z-index: 1;
+  width: 100;
+  height: 40px;
+  left: 150px;
+  background-color: rgba(0, 0, 0, 0.8);
+  position: absolute;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.success {
+  color: #0F0;
+}
+
+.inputError {
+  color: #FEF;
+}
+
+.notFound {
+  color: #FA0;
+}
+
+.fatalError {
+  color: #A00;
 }
